fixed work-break wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   background-color: #f9f9f9;
-  
 }
 
 .whole-page {
@@ -77,6 +76,8 @@ textarea {
   border: #050505 1px solid;
   height: 70%;
   width: 70%;
+  overflow-wrap: break-word;
+  width: 800px;
 }
 
 .general-information {
